--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+.add-user {
+  width: 700px;
+  margin: auto;
+}
+
+.show-data {
+  width: 1000px;
+
+  margin: auto;
+}
+
+.pagination {
+  width: 900px;
+
+  margin: auto;
+}
+
+.filter-data {
+  width: 925px;
+
+  margin: auto;
+}
+
+.filter-input {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .App {
   text-align: center;
 }
